--- a/src/componentes/Categoria/Categoria.css
+++ b/src/componentes/Categoria/Categoria.css
@@ -1,16 +1,16 @@
-.time {
+.categoria {
     text-align: center;
     padding: 32px;
 }
 
-.time h3 {
+.categoria h3 {
     font-size: 32px;
     border-bottom: 4px solid;
     display: inline-block;
     padding-bottom: 8px;
 }
 
-.time .colaboradores {
+.cagegoria .coisas {
     display: flex;
     justify-content: space-around;
     margin-top: 32px;
